--- a/ApiFinancasPessoais/application.properties
+++ b/ApiFinancasPessoais/application.properties
@@ -1,4 +1,11 @@
 
+security.config.prefix = Bearer
+security.config.key = SECRET_KEY
+security.config.expiration= 3600000
+
+
+
+
 ##H2 Database Connection Properties
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.driverClassName=org.h2.Driver
@@ -7,3 +14,5 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.show-sql: true
 spring.h2.console.enabled=true
+
+
